build based on c6f085d

--- a/dev/basics/overview/index.html
+++ b/dev/basics/overview/index.html
@@ -23,9 +23,9 @@ v_distr @Reaction {actors: C1 = C2} := Q * (C1 - C2);
 
 // Parameters
 dose @Const = 20;
-kabs @Const = 10;
-kel @Const = 0.2;
-Q @Const = 3.2;
+kabs @Const = 20;
+kel @Const = 0.5;
+Q @Const = 1.0;
 
 // single dose event
 sw1 @TimeSwitcher {start: 0};
@@ -147,54 +147,54 @@ new_condition = Condition(
 | Use `sol[i]` to get component by number.
 | Use `DataFrame(sol)` to transform.
 | Use `plot(sol)` to plot results.
-+---------------------------------------------------------------------------</code></pre><p>The whole solution consists of parts which corresponds to number of conditions in Platform.</p><p>The results can be plotted using default <code>plot</code> method.</p><pre><code class="language-julia">plot(res)</code></pre><p><img src="../sim1.png" alt="sim1"/></p><p>The whole solution can also be translated into <code>DataFrame</code>.</p><pre><code class="language-julia">res_df = DataFrame(res)</code></pre><pre><code class="language-julia">964×6 DataFrame
- Row │ t             A0           C1           C2           scope   condition   
-     │ Float64       Float64      Float64      Float64      Symbol  Symbol      
-─────┼──────────────────────────────────────────────────────────────────────────
-   1 │  0.0           0.0         0.0          0.0          ode_    multiple_15
-   2 │  0.0          15.0         0.0          0.0          sw2     multiple_15
-  ⋮  │      ⋮             ⋮            ⋮            ⋮         ⋮          ⋮
- 963 │ 47.9581        4.55058e-7  0.201956     0.2561       ode_    dose_100
- 964 │ 48.0           2.99302e-7  0.201417     0.255416     ode_    dose_100
-                                                                960 rows omitted</code></pre><p>User can work with the solution component by using indexing by component number, like here <code>res[1]</code> or by condition id <code>res[:dose_1]</code>.</p><p>Any component can also be transformed into <code>DataFrame</code>.</p><pre><code class="language-julia">res_df1 = DataFrame(res[1])</code></pre><pre><code class="language-julia">626×5 DataFrame
- Row │ t              A0           C1           C2           scope  
-     │ Float64        Float64      Float64      Float64      Symbol 
-─────┼──────────────────────────────────────────────────────────────
-   1 │   0.0           0.0         0.0          0.0          ode_
-   2 │   0.0          15.0         0.0          0.0          sw2
-   3 │   6.66622e-6   14.999       0.000158714  1.59703e-10  ode_
-   4 │   7.33284e-5   14.989       0.00174523   1.93194e-8   ode_
-   5 │   0.000739951  14.8894      0.0175482    1.96242e-6   ode_
-   6 │   0.00527893   14.2287      0.122199     9.82366e-5   ode_
-   7 │   0.0141793    13.017       0.313149     0.000686265  ode_
-   8 │   0.027481     11.3957      0.566335     0.00245837   ode_
-  ⋮  │       ⋮             ⋮            ⋮            ⋮         ⋮
- 620 │ 166.734         4.55058e-7  0.193317     0.245144     ode_
- 621 │ 167.085         4.55058e-7  0.189038     0.239719     ode_
- 622 │ 167.436         4.55058e-7  0.184854     0.234413     ode_
- 623 │ 167.786         4.55058e-7  0.180762     0.229224     ode_
- 624 │ 168.0           7.00046e-8  0.178314     0.22612      ode_
- 625 │ 168.0           7.00046e-8  0.178314     0.22612      ode_
- 626 │ 168.0          15.0         0.178314     0.22612      sw2
-                                                    611 rows omitted</code></pre><p>The component can also be plotted.</p><pre><code class="language-julia">plot(res[1])</code></pre><p><img src="../sim2.png" alt="sim2"/></p><h3 id="Monte-Carlo"><a class="docs-heading-anchor" href="#Monte-Carlo">Monte-Carlo</a><a id="Monte-Carlo-1"></a><a class="docs-heading-anchor-permalink" href="#Monte-Carlo" title="Permalink"></a></h3><p>Monte-Carlo method runs simulation many times combining all simulations into single object <code>MCResults</code>. You should clarify here the distribution of random parameters and number of iterations.</p><pre><code class="language-julia">mc_res = mc(p, [:kabs=&gt;Normal(10.,1e-1), :kel=&gt;Normal(0.2,1e-3)], 1000)</code></pre><pre><code class="language-julia">+---------------------------------------------------------------------------
++---------------------------------------------------------------------------</code></pre><p>The whole solution consists of parts which corresponds to number of conditions in Platform.</p><p>The results can be plotted using default <code>plot</code> method.</p><pre><code class="language-julia">plot(res)</code></pre><p><img src="../sim1.png" alt="sim1"/></p><p>The whole solution can also be translated into <code>DataFrame</code>.</p><pre><code class="language-julia">res_df = DataFrame(res)</code></pre><pre><code class="language-julia">1031×6 DataFrame
+  Row │ t             A0            C1           C2           scope   condition   
+      │ Float64       Float64       Float64      Float64      Symbol  Symbol      
+──────┼───────────────────────────────────────────────────────────────────────────
+    1 │  0.0           0.0          0.0          0.0          ode_    multiple_15
+    2 │  0.0          15.0          0.0          0.0          sw2     multiple_15
+    3 │  3.33311e-6   14.999        0.000158714  2.49537e-11  ode_    multiple_15
+    4 │  3.66642e-5   14.989        0.00174525   3.0187e-9    ode_    multiple_15
+  ⋮   │      ⋮             ⋮             ⋮            ⋮         ⋮          ⋮
+ 1029 │ 45.1252       -3.9532e-26   0.0292381    0.108637     ode_    dose_100
+ 1030 │ 47.5238        3.29325e-27  0.0247767    0.0920607    ode_    dose_100
+ 1031 │ 48.0          -6.75365e-28  0.0239764    0.089087     ode_    dose_100
+                                                                 1024 rows omitted</code></pre><p>User can work with the solution component by using indexing by component number, like here <code>res[1]</code> or by condition id <code>res[:dose_1]</code>.</p><p>Any component can also be transformed into <code>DataFrame</code>.</p><pre><code class="language-julia">res_df1 = DataFrame(res[1])</code></pre><pre><code class="language-julia">702×6 DataFrame
+ Row │ t              A0            C1           C2           scope   condition   
+     │ Float64        Float64       Float64      Float64      Symbol  Symbol      
+─────┼────────────────────────────────────────────────────────────────────────────
+   1 │   0.0           0.0          0.0          0.0          ode_    multiple_15
+   2 │   0.0          15.0          0.0          0.0          sw2     multiple_15
+   3 │   3.33311e-6   14.999        0.000158714  2.49537e-11  ode_    multiple_15
+   4 │   3.66642e-5   14.989        0.00174525   3.0187e-9    ode_    multiple_15
+  ⋮  │       ⋮             ⋮             ⋮            ⋮         ⋮          ⋮
+ 700 │ 168.0           2.79899e-18  0.0232934    0.0865488    ode_    multiple_15
+ 701 │ 168.0           2.79899e-18  0.0232934    0.0865488    ode_    multiple_15
+ 702 │ 168.0          15.0          0.0232934    0.0865488    sw2     multiple_15
+                                                                  695 rows omitted</code></pre><p>The component can also be plotted.</p><pre><code class="language-julia">plot(res[1])</code></pre><p><img src="../sim2.png" alt="sim2"/></p><h3 id="Monte-Carlo"><a class="docs-heading-anchor" href="#Monte-Carlo">Monte-Carlo</a><a id="Monte-Carlo-1"></a><a class="docs-heading-anchor-permalink" href="#Monte-Carlo" title="Permalink"></a></h3><p>Monte-Carlo method runs simulation many times combining all simulations into single object <code>MCResults</code>. You should clarify here the distribution of random parameters and number of iterations.</p><pre><code class="language-julia">mc_res = mc(p, [:kabs=&gt;Normal(10.,1e-1), :kel=&gt;Normal(0.2,1e-3)], 1000)</code></pre><pre><code class="language-julia">+---------------------------------------------------------------------------
 | Monte-Carlo results for 4 condition(s).
 | [:multiple_15 =&gt; ..., :dose_1 =&gt; ..., :dose_10 =&gt; ..., :dose_100 =&gt; ...]
 | Use `sol[id]` to get component by id.
 | Use `sol[i]` to get component by number.
 | Use `DataFrame(sol)` to transform.
 | Use `plot(sol)` to plot results.
-+---------------------------------------------------------------------------</code></pre><p>To transform everything into <code>DataFrame</code></p><pre><code class="language-julia">mc_df = DataFrame(mc_res)</code></pre><pre><code class="language-julia">998000×7 DataFrame
++---------------------------------------------------------------------------</code></pre><p>To transform everything into <code>DataFrame</code></p><pre><code class="language-julia">mc_df = DataFrame(mc_res)</code></pre><pre><code class="language-julia">946000×7 DataFrame
     Row │ iter   t             A0           C1           C2           scope   condition   
         │ Int64  Float64       Float64      Float64      Float64      Symbol  Symbol      
 ────────┼─────────────────────────────────────────────────────────────────────────────────
-      1 │     1   0.0           0.0         0.0          0.0          ode_    multiple_15
+      1 │     1   0.0           0.0         0.0          0.0          ode_    multiple_15 
       2 │     1   0.0          15.0         0.0          0.0          sw2     multiple_15
-      3 │     1   6.66014e-6   14.999       0.000158714  1.59557e-10  ode_    multiple_15
+      3 │     1   6.67001e-6   14.999       0.000158714  4.99357e-11  ode_    multiple_15
+      4 │     1   7.33701e-5   14.989       0.00174525   6.04082e-9   ode_    multiple_15
+      5 │     1   0.000740371  14.8894      0.0175505    6.13689e-7   ode_    multiple_15
+      6 │     1   0.00602741   14.1231      0.139042     3.99353e-5   ode_    multiple_15
    ⋮    │   ⋮         ⋮             ⋮            ⋮            ⋮         ⋮          ⋮
- 997998 │  1000  47.5835        4.55058e-7  0.210559     0.266633     ode_    dose_100
- 997999 │  1000  47.9215        4.55058e-7  0.206089     0.260971     ode_    dose_100
- 998000 │  1000  48.0           2.01668e-7  0.205065     0.259675     ode_    dose_100
-                                                                       997994 rows omitted</code></pre><p>To plot everything use <code>plot</code></p><pre><code class="language-julia">plot(mc_res)</code></pre><p><img src="../sim3.png" alt="fig3"/></p><h3 id="Fitting"><a class="docs-heading-anchor" href="#Fitting">Fitting</a><a id="Fitting-1"></a><a class="docs-heading-anchor-permalink" href="#Fitting" title="Permalink"></a></h3><p>To run optimization problem you need to do three steps:</p><ul><li>Be sure that you measurement points are loaded in a proper way: referred <code>Condition</code>s exists, proper error model is chosen</li><li>If required add parameters responsible for noise distribution into a model code, like <code>sigma</code> etc.</li><li>select a set of constants which will be fitted and set initial values for them.</li></ul><p>For the presented example we uses normal distribution of measurement error with unknown variance parameter <code>sigma1</code>, <code>sigma2</code>, <code>sigma3</code> for doses 1, 10 and 100.</p><p>We need to add this unknown parameters into the Heta code updating the initial model:</p><pre><code class="language-heta">...
+ 945996 │  1000  46.6664        4.55058e-7  0.247023     0.484307     ode_    dose_100
+ 945997 │  1000  47.0172        4.55058e-7  0.243049     0.476516     ode_    dose_100
+ 945998 │  1000  47.3681        4.55059e-7  0.239139     0.46885      ode_    dose_100
+ 945999 │  1000  47.719         4.55058e-7  0.235292     0.461307     ode_    dose_100
+ 946000 │  1000  48.0           1.28404e-7  0.232256     0.455355     ode_    dose_100
+                                                                       945989 rows omitted</code></pre><p>To plot everything use <code>plot</code></p><pre><code class="language-julia">plot(mc_res)</code></pre><p><img src="../sim3.png" alt="fig3"/></p><h3 id="Fitting"><a class="docs-heading-anchor" href="#Fitting">Fitting</a><a id="Fitting-1"></a><a class="docs-heading-anchor-permalink" href="#Fitting" title="Permalink"></a></h3><p>To run optimization problem you need to do three steps:</p><ul><li>Be sure that you measurement points are loaded in a proper way: referred <code>Condition</code>s exists, proper error model is chosen</li><li>If required add parameters responsible for noise distribution into a model code, like <code>sigma</code> etc.</li><li>select a set of constants which will be fitted and set initial values for them.</li></ul><p>For the presented example we uses normal distribution of measurement error with unknown variance parameter <code>sigma1</code>, <code>sigma2</code>, <code>sigma3</code> for doses 1, 10 and 100.</p><p>We need to add this unknown parameters into the Heta code updating the initial model:</p><pre><code class="language-heta">...
 A0 [sw2]= dose;
 
 // parameters for fitting
@@ -210,7 +210,6 @@ add_measurements!(p, measurements_df)</code></pre><p>To check the initial simula
 plot(res0, yscale=:log, ylims=(1e-3,1e2))</code></pre><p><img src="../sim4.png" alt="sim4"/></p><p>Now let&#39;s run fitting.</p><pre><code class="language-julia">to_fit = [
     :kabs =&gt; 8.0,
     :Q =&gt; 4.0,
-    :Vol1 =&gt; 6.0,
     :kel =&gt; 2.2,
     :sigma1 =&gt; 0.1,
     :sigma2 =&gt; 0.1,
@@ -219,15 +218,14 @@ plot(res0, yscale=:log, ylims=(1e-3,1e2))</code></pre><p><img src="../sim4.png" 
 fit_res = fit(p, to_fit)</code></pre><pre><code class="language-julia">+---------------------------------------------------------------------------
 | Fitting results:
 |   status: FTOL_REACHED
-|   optim: [:kabs =&gt; 9.70386210514378, :Q =&gt; 3.1637539835052744, :Vol1 =&gt; 3.4105990826839747, :kel =&gt; 0.2039430020237252, :sigma1 =&gt; 0.08224608344682492, :sigma2 =&gt; 0.06737692009766567, :sigma3 =&gt; 0.09149685023958987]. Access optim estimate with `optim(f::FitResults)`
-|   objective function value: 4164.535216417519. Access objective value with `obj(f::FitResults)`
-|   number of objective function evaluations: 170
-+---------------------------------------------------------------------------</code></pre><p>To get the list of optimal parameters values we should use <code>optim</code> function.</p><pre><code class="language-julia">optim(fit_res)</code></pre><pre><code class="language-julia">8-element Vector{Pair{Symbol, Float64}}:
-   :kabs =&gt; 9.70386210514378
-      :Q =&gt; 3.1637539835052744
-   :Vol1 =&gt; 3.4105990826839747
-    :kel =&gt; 0.2039430020237252
- :sigma1 =&gt; 0.08224608344682492
- :sigma2 =&gt; 0.06737692009766567
- :sigma3 =&gt; 0.09149685023958987</code></pre><p>You can simulate and plot results with the following code.</p><pre><code class="language-julia">res_optim = sim(p, parameters_upd = optim(fit_res))
-plot(res_optim, yscale=:log, ylims=(1e-3,1e2))</code></pre><p><img src="../sim5.png" alt="sim5"/></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../../">« Home</a><a class="docs-footer-nextpage" href="../../table-formats/condition/">Conditions tables »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Tuesday 13 July 2021 14:41">Tuesday 13 July 2021</span>. Using Julia version 1.6.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+|   optim: [:kabs =&gt; 9.664612290142436, :Q =&gt; 3.182280353785782, :kel =&gt; 0.20333675237278281, :sigma1 =&gt; 0.20073592014870978, :sigma2 =&gt; 0.15748031874469834, :sigma3 =&gt; 0.11672689231044918]. Access optim estimate with `optim(f::FitResults)`
+|   objective function value: 4164.493819852298. Access objective value with `obj(f::FitResults)`
+|   number of objective function evaluations: 134
++---------------------------------------------------------------------------</code></pre><p>To get the list of optimal parameters values we should use <code>optim</code> function.</p><pre><code class="language-julia">optim(fit_res)</code></pre><pre><code class="language-julia">6-element Vector{Pair{Symbol, Float64}}:
+   :kabs =&gt; 9.664612290142436
+      :Q =&gt; 3.182280353785782
+    :kel =&gt; 0.20333675237278281
+ :sigma1 =&gt; 0.20073592014870978
+ :sigma2 =&gt; 0.15748031874469834
+ :sigma3 =&gt; 0.11672689231044918</code></pre><p>You can simulate and plot results with the following code.</p><pre><code class="language-julia">res_optim = sim(p, parameters_upd = optim(fit_res))
+plot(res_optim, yscale=:log, ylims=(1e-3,1e2))</code></pre><p><img src="../sim5.png" alt="sim5"/></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../../">« Home</a><a class="docs-footer-nextpage" href="../../table-formats/condition/">Conditions tables »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Wednesday 14 July 2021 16:01">Wednesday 14 July 2021</span>. Using Julia version 1.6.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
