--- a/dev/tutorial/fit/index.html
+++ b/dev/tutorial/fit/index.html
@@ -59,9 +59,11 @@ add_scenarios!(p, scn_df)</code></pre><h2 id="Load-measurements"><a class="docs-
 p</code></pre><pre><code class="language-none">Platform with 1 model(s), 4 scenario(s), 90 measurement(s)
    Models: nameless
    Scenarios: dose_1, dose_10, dose_100, multiple_15</code></pre><p>If we run the simulations and then plot them we see the simulation results together with measured values.</p><pre><code class="language-julia"># simulate all
-res = sim(p)
-
-# plot all default
+res = sim(p)</code></pre><pre><code class="language-none">4-element Vector{Pair{Symbol, SimResult}}
+    :dose_1 =&gt; 80x3 SimResult with status :Success.
+    :dose_10 =&gt; 100x3 SimResult with status :Success.
+    :dose_100 =&gt; 124x3 SimResult with status :Success.
+    :multiple_15 =&gt; 668x3 SimResult with status :Success.</code></pre><pre><code class="language-julia"># plot all default
 plot(res)</code></pre><p><img src="../fit-fig03.png" alt="fit-fig03"/></p><p>To display in more convenient way one can use the additional <code>yscale</code> and <code>ylim</code> arguments. </p><pre><code class="language-julia"># plot C1, C2 in log scale
 plot(res, vars=[:C1,:C2], yscale=:log10, ylim=(1e-3, 1e3))</code></pre><p><img src="../fit-fig04.png" alt="fit-fig04"/></p><h2 id="Fitting"><a class="docs-heading-anchor" href="#Fitting">Fitting</a><a id="Fitting-1"></a><a class="docs-heading-anchor-permalink" href="#Fitting" title="Permalink"></a></h2><p>Before we run the optimization procedure we should select the parameters to optimize with the starting values.</p><p><code>sigma1</code>, <code>sigma2</code>, <code>sigma3</code> are not included in the main model code. They describe just the variability of error for the scenarios: <code>dose_1</code>, <code>dose_10</code> and <code>dose_100</code>.</p><pre><code class="language-julia"># fitted parameters
 to_fit = [
@@ -73,21 +75,21 @@ to_fit = [
     :sigma3 =&gt; 0.1,
 ]
 res_optim = fit(p, to_fit) # default fitting</code></pre><pre><code class="language-none">┌ Warning: Scenario &quot;:multiple_15&quot; has no measurements. It will be excluded from fitting.
-└ @ HetaSimulator y:\HetaSimulator.jl\src\fit.jl:74
-FitResults with status :FTOL_REACHED
-   Status: FTOL_REACHED
-   Optimal values: [:kabs =&gt; 9.664612290142436, :Q =&gt; 3.182280353785782, :kel =&gt; 0.20333675237278281, :sigma1 =&gt; 0.20073592014870978, :sigma2 =&gt; 0.15748031874469834, :sigma3 =&gt; 0.11672689231044918]
-   Objective function value: 4164.493819852298
-   Objective function evaluations count: 134</code></pre><p>The scenario <code>multiple_15</code> does not include any measurement. That&#39;s why we see the warning message here. This is not an error.</p><p>The optimal value of the parameters can be obtained with <code>optim</code> method applied for <code>FitResults</code>.</p><pre><code class="language-julia"># optimal parameters
-optim(res_optim)</code></pre><pre><code class="language-none">6-element Vector{Pair{Symbol, Float64}}:
-   :kabs =&gt; 9.664612290142436
-      :Q =&gt; 3.182280353785782
-    :kel =&gt; 0.20333675237278281
- :sigma1 =&gt; 0.20073592014870978
- :sigma2 =&gt; 0.15748031874469834
- :sigma3 =&gt; 0.11672689231044918</code></pre><p>To display the simulations with updated parameters values we can use <code>parameters_upd</code> argument in <code>sim</code>.</p><pre><code class="language-julia"># check fitting quality 
+└ @ HetaSimulator y:\HetaSimulator.jl\src\fit.jl:77
+FitResult with status :XTOL_REACHED
+   Status: XTOL_REACHED
+   Optimal values: [:kabs =&gt; 18.868605026704916, :Q =&gt; 4.043662480774219, :kel =&gt; 0.17104243648378176, :sigma1 =&gt; 0.020347955494158528, :sigma2 =&gt; 0.31561050699802246, :sigma3 =&gt; 0.5716026958426483]
+   OF value: 140.96503722971997
+   OF count: 8612</code></pre><p>The scenario <code>multiple_15</code> does not include any measurement. That&#39;s why we see the warning message here. This is not an error.</p><p>The optimal value of the parameters can be obtained with <code>optim</code> method applied for <code>FitResult</code>.</p><pre><code class="language-julia"># optimal parameters
+optim(res_optim)</code></pre><pre><code class="language-none"> 6-element Vector{Pair{Symbol, Float64}}:
+   :kabs =&gt; 18.868605026704916
+      :Q =&gt; 4.043662480774219
+    :kel =&gt; 0.17104243648378176
+ :sigma1 =&gt; 0.020347955494158528
+ :sigma2 =&gt; 0.31561050699802246
+ :sigma3 =&gt; 0.5716026958426483</code></pre><p>To display the simulations with updated parameters values we can use <code>parameters_upd</code> argument in <code>sim</code>.</p><pre><code class="language-julia"># check fitting quality 
 res = sim(p, parameters_upd = optim(res_optim))
-plot(res, yscale=:log10, vars=[:C1,:C2], ylims=(1e-3,1e2))</code></pre><p><img src="../fit-fig05.png" alt="fig05"/></p><h2 id="Fitting-with-parameters-table"><a class="docs-heading-anchor" href="#Fitting-with-parameters-table">Fitting with parameters table</a><a id="Fitting-with-parameters-table-1"></a><a class="docs-heading-anchor-permalink" href="#Fitting-with-parameters-table" title="Permalink"></a></h2><p>The parameters set that is used for <code>fit</code> can also be taken from tables. The description of table format can be found in <a href="tutorial/..table-formats/parameters/">documentation</a>.</p><p>For example we will use the following table.</p><p><img src="../fit-fig06.png" alt="fig06"/></p><p>File can be downloaded here: <a href="../fit-files/parameters.csv">parameters.csv</a> The table can be loaded with <code>read_parameters</code> method.</p><pre><code class="language-julia"># read parameters from table
+plot(res, yscale=:log10, vars=[:C1,:C2], ylims=(1e-3,1e2))</code></pre><p><img src="../fit-fig05.png" alt="fig05"/></p><h2 id="Fitting-with-parameters-table"><a class="docs-heading-anchor" href="#Fitting-with-parameters-table">Fitting with parameters table</a><a id="Fitting-with-parameters-table-1"></a><a class="docs-heading-anchor-permalink" href="#Fitting-with-parameters-table" title="Permalink"></a></h2><p>The parameters set that is used for <code>fit</code> can also be taken from tables. The description of table format can be found in <a href="table-formats/parameters/">documentation</a>.</p><p>For example we will use the following table.</p><p><img src="../fit-fig06.png" alt="fig06"/></p><p>File can be downloaded here: <a href="../fit-files/parameters.csv">parameters.csv</a> The table can be loaded with <code>read_parameters</code> method.</p><pre><code class="language-julia"># read parameters from table
 params_df = read_parameters(&quot;./parameters.csv&quot;)</code></pre><pre><code class="language-none">6×6 DataFrame
  Row │ parameter  scale   lower    upper    nominal  estimate 
      │ Symbol     Symbol  Float64  Float64  Float64  Bool     
@@ -98,12 +100,12 @@ params_df = read_parameters(&quot;./parameters.csv&quot;)</code></pre><pre><code
    4 │ sigma1     lin         0.0     10.0      0.1      true
    5 │ sigma2     lin         0.0     10.0      0.1      true
    6 │ sigma3     lin         0.0     10.0      0.1      true</code></pre><p>As previously we can use this <code>DataFrame</code> for optimization.</p><pre><code class="language-julia">res_optim = fit(p, params_df)</code></pre><pre><code class="language-none">┌ Warning: Scenario &quot;:multiple_15&quot; has no measurements. It will be excluded from fitting.
-└ @ HetaSimulator y:\HetaSimulator.jl\src\fit.jl:74
-FitResults with status :FTOL_REACHED
+└ @ HetaSimulator 
+FitResult with status :FTOL_REACHED
    Status: FTOL_REACHED
-   Optimal values: [:kabs =&gt; 9.696004253888853, :kel =&gt; 0.20422994254743634, :Q =&gt; 3.1651123659949176, :sigma1 =&gt; 0.15675092258640785, :sigma2 =&gt; 0.10972117348555543, :sigma3 =&gt; 0.0957743148928216]
-   Objective function value: 4164.577650364314
-   Objective function evaluations count: 108</code></pre><h2 id="Additional-optimization-specific-options"><a class="docs-heading-anchor" href="#Additional-optimization-specific-options">Additional optimization-specific options</a><a id="Additional-optimization-specific-options-1"></a><a class="docs-heading-anchor-permalink" href="#Additional-optimization-specific-options" title="Permalink"></a></h2><p>Internally <code>HetaSimulator</code> uses NLopt library. We can choose the optimization algorithm as well as additional options.</p><p>Read more here: <a href="https://nlopt.readthedocs.io/en/latest/NLopt_Algorithms/">https://nlopt.readthedocs.io/en/latest/NLopt_Algorithms/</a></p><pre><code class="language-julia">res_optim = fit(
+   Optimal values: [:kabs =&gt; 8.669590504032879, :kel =&gt; 0.2299120380231296, :Q =&gt; 3.386457652767808, :sigma1 =&gt; 0.010105725225267037, :sigma2 =&gt; 0.09951673713071268, :sigma3 =&gt; 0.6024808584834973]
+   OF value: -101.7645013649068
+   OF count: 417</code></pre><h2 id="Additional-optimization-specific-options"><a class="docs-heading-anchor" href="#Additional-optimization-specific-options">Additional optimization-specific options</a><a id="Additional-optimization-specific-options-1"></a><a class="docs-heading-anchor-permalink" href="#Additional-optimization-specific-options" title="Permalink"></a></h2><p>Internally <code>HetaSimulator</code> uses NLopt library. We can choose the optimization algorithm as well as additional options.</p><p>Read more here: <a href="https://nlopt.readthedocs.io/en/latest/NLopt_Algorithms/">https://nlopt.readthedocs.io/en/latest/NLopt_Algorithms/</a></p><pre><code class="language-julia">res_optim = fit(
     p, 
     params_df, 
     fit_alg = :LN_SBPLX, 
@@ -111,4 +113,4 @@ FitResults with status :FTOL_REACHED
     ftol_rel = 0, 
     maxeval = 10^6
 )
-optim(res_optim)</code></pre><p>There are several options which are available for a user.  To know more read about <a href="../../api/#HetaSimulator.fit-Tuple{Platform, Any}"><code>fit</code></a> in API documentation.</p><ul><li><code>fit_alg</code> : fitting algorithm. Default is <code>:LN_NELDERMEAD</code></li><li><code>ftol_abs</code> : absolute tolerance on function value. Default is <code>0.0</code></li><li><code>ftol_rel</code> : relative tolerance on function value. Default is <code>1e-4</code></li><li><code>xtol_rel</code> : relative tolerance on optimization parameters. Default is <code>0.0</code></li><li><code>xtol_rel</code> : absolute tolerance on optimization parameters. Default is <code>0.0</code></li><li><code>maxeval</code> : maximum number of function evaluations. Default is <code>1e4</code></li><li><code>maxtime</code> : maximum optimization time (in seconds). Default is <code>0</code></li></ul></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../mc/">« Monte-Carlo. Statistics calculation</a><a class="docs-footer-nextpage" href="../../api/">API »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Tuesday 23 November 2021 15:06">Tuesday 23 November 2021</span>. Using Julia version 1.6.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+optim(res_optim)</code></pre><p>There are several options which are available for a user.  To know more read about <a href="../../api/#HetaSimulator.fit-Tuple{Platform, Any}"><code>fit</code></a> in API documentation.</p><ul><li><code>fit_alg</code> : fitting algorithm. Default is <code>:LN_NELDERMEAD</code></li><li><code>ftol_abs</code> : absolute tolerance on function value. Default is <code>0.0</code></li><li><code>ftol_rel</code> : relative tolerance on function value. Default is <code>1e-4</code></li><li><code>xtol_rel</code> : relative tolerance on optimization parameters. Default is <code>0.0</code></li><li><code>xtol_rel</code> : absolute tolerance on optimization parameters. Default is <code>0.0</code></li><li><code>maxeval</code> : maximum number of function evaluations. Default is <code>1e4</code></li><li><code>maxtime</code> : maximum optimization time (in seconds). Default is <code>0</code></li></ul></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../mc/">« Monte-Carlo. Statistics calculation</a><a class="docs-footer-nextpage" href="../../api/">API »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Thursday 25 November 2021 09:33">Thursday 25 November 2021</span>. Using Julia version 1.6.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
